--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,10 @@
 server:
   port: 8080
+  servlet:
+    session:
+      cookie:
+        http-only: true
+      timeout: 15m
 spring:
   base:
     datasource:
@@ -13,7 +18,7 @@ spring:
     database: postgresql
     hibernate:
       ddl-auto: none
-    show-sql: true
+    show-sql: false
   liquibase:
     enabled: true
     change-log: classpath:migrations/master.xml
